# crazyflie-lib-cpp

./: CMakeLists.txt  README.md
examples/: appChannelTest.cpp  basicLog.cpp  basicToc.cpp  connectionWorkerTest.cpp  crazyflieLog.cpp  logConnectionWorker.cpp  logViaAppChannel.cpp  resetUsb.cpp  stressTest.cpp
include/: ConnectionWorker.h  ConnectionWrapper.h  Crazyflie.h  Log.h  Toc.h  TocWrapper.h  WrapperTemplate.h  debug.h  utilsPlus.hpp
src/: ConnectionWorker.cpp  ConnectionWrapper.cpp  Crazyflie.cpp  Log.cpp  LoggingCrazyflieWrapper.cpp  README.md  Toc.cpp  TocWrapper.cpp
